Update terraform cert image

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main class="main main--about">
     <p>
-        Experienced IT professional with over 13 years of expertise in software development, specializing in Cloud and DevOps Automation. Proven track record in Container Engineering, web service development, system integrations, and successful production implementations. Adept at Automation, SRE, and Agile Methodology. Proven ability to navigate complex technical landscapes, deliver innovative solutions, and contribute to dynamic teams in DevOps and Cloud environments.
+        Experienced IT professional with over 13+ years of expertise in software development, specializing in Cloud and DevOps Automation. Proven track record in Container Engineering, web service development, system integrations, and successful production implementations. Adept at Automation, SRE, and Agile Methodology. Proven ability to navigate complex technical landscapes, deliver innovative solutions, and contribute to dynamic teams in DevOps and Cloud environments.
         <br><br>
         ☁️ Cloud Platforms: AWS, Azure<br>
         🔧 Automation & IaC: Terraform, Ansible<br>
